--- a/LiteTube/MainPage.xaml
+++ b/LiteTube/MainPage.xaml
@@ -15,7 +15,8 @@
     shell:SystemTray.IsVisible="False">
 
     <!--LayoutRoot is the root grid where all page content is placed-->
-    <Grid x:Name="LayoutRoot" Background="Transparent">
+    <Grid x:Name="LayoutRoot" 
+          Background="Transparent">
 
         <!-- LOCALIZATION NOTE:
             To localize the displayed strings copy their values to appropriately named
@@ -37,21 +38,64 @@
          -->
 
          <!--Panorama control-->
-        <phone:Panorama Title="my application">
-            <phone:Panorama.Background>
+        <phone:Panorama Title="my application" Background="{StaticResource PhoneBackgroundBrush}">
+            <!--<phone:Panorama.Background>
                 <ImageBrush ImageSource="/LiteTube;component/Assets/PanoramaBackground.png"/>
-            </phone:Panorama.Background>
+            </phone:Panorama.Background>-->
 
             <!--Panorama item one-->
-            <phone:PanoramaItem Header="first item">
+            <phone:PanoramaItem Header="Activity">
                 <!--Single line list with text wrapping-->
                 <phone:LongListSelector Margin="0,0,-22,0" ItemsSource="{Binding Items}">
                     <phone:LongListSelector.ItemTemplate>
                         <DataTemplate>
-                            <StackPanel Margin="0,-6,0,12">
-                                <TextBlock Text="{Binding LineOne}" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}" FontSize="{StaticResource PhoneFontSizeExtraLarge}"/>
-                            </StackPanel>
-                        </DataTemplate>
+                            <Grid Margin="0,0,0,5">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
+
+                                <Grid Grid.Column="0" 
+                                      HorizontalAlignment="Left"
+                                      Background="#FFFFC700"
+                                      Height="100"
+                                      Width="178">
+                                    
+                                <Image Source="{Binding ImagePath}" 
+                                       Stretch="UniformToFill" 
+                                       AutomationProperties.Name="{Binding Title}"/>
+
+                                    <Border Margin="2"
+                                        VerticalAlignment="Bottom"
+                                        HorizontalAlignment="Right"
+                                        Background="Black"
+                                        Padding="4,0,4,0">
+                                        <TextBlock 
+                                                TextWrapping="NoWrap" 
+                                                Foreground="White"
+                                                FontSize="14"/>
+                                    </Border>
+
+                                </Grid>
+
+                                <StackPanel Grid.Column="1" 
+                                            Margin="8,0,0,0">
+                                    <TextBlock Text="{Binding LineOne}" 
+                                               Style="{StaticResource PhoneTextNormalStyle}"
+                                               TextTrimming="WordEllipsis"/>
+                                    <TextBlock Text="{Binding LineTwo}" 
+                                               Style="{StaticResource PhoneTextSmallStyle}"
+                                               Margin="0,0,0,0"
+                                               TextWrapping="Wrap"/>
+                                    <TextBlock TextWrapping="NoWrap"
+                                               Text="{Binding PublishedAt}"
+                                               Style="{StaticResource PhoneTextSmallStyle}">
+                                    <Run Text="Published at " x:Uid="PublishedAt"/>
+                                    <Run Text="{Binding PublishedAt}" />
+                                    </TextBlock>
+                                </StackPanel>
+                            </Grid>
+                            </DataTemplate>
                     </phone:LongListSelector.ItemTemplate>
                 </phone:LongListSelector>
             </phone:PanoramaItem>
