--- a/LiteTube/App.xaml
+++ b/LiteTube/App.xaml
@@ -8,15 +8,21 @@
 
     <!--Application Resources-->
     <Application.Resources>
-        <sys:Double x:Key="PanoramaItemHeaderFontSize">66</sys:Double>
-
-        <Style x:Key="PanoramaItemHeaderTextStyle" TargetType="TextBlock">
-            <Setter Property="FontFamily" Value="{StaticResource PhoneFontFamilySemiLight}"/>
-            <Setter Property="FontSize" Value="{StaticResource PanoramaItemHeaderFontSize}"/>
-            <Setter Property="CharacterSpacing" Value="-35"/>
-        </Style>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Controls/LoadingListView.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
         
-        <local:LocalizedStrings xmlns:local="clr-namespace:LiteTube" x:Key="LocalizedStrings"/>
+            <sys:Double x:Key="PanoramaItemHeaderFontSize">66</sys:Double>
+
+            <Style x:Key="PanoramaItemHeaderTextStyle" TargetType="TextBlock">
+                <Setter Property="FontFamily" Value="{StaticResource PhoneFontFamilySemiLight}"/>
+                <Setter Property="FontSize" Value="{StaticResource PanoramaItemHeaderFontSize}"/>
+                <Setter Property="CharacterSpacing" Value="-35"/>
+            </Style>
+        
+            <local:LocalizedStrings xmlns:local="clr-namespace:LiteTube" x:Key="LocalizedStrings"/>
+        </ResourceDictionary>
     </Application.Resources>
 
     <Application.ApplicationLifetimeObjects>
