--- a/LiteTube/MainPage.xaml
+++ b/LiteTube/MainPage.xaml
@@ -44,60 +44,10 @@
             </phone:Panorama.Background>-->
 
             <!--Panorama item one-->
-            <phone:PanoramaItem Header="Activity">
+            <phone:PanoramaItem Header="Most polpular">
                 <!--Single line list with text wrapping-->
-                <phone:LongListSelector Margin="0,0,-22,0" ItemsSource="{Binding Items}">
-                    <phone:LongListSelector.ItemTemplate>
-                        <DataTemplate>
-                            <Grid Margin="0,0,0,5">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="Auto"/>
-                                    <ColumnDefinition Width="*"/>
-                                </Grid.ColumnDefinitions>
-
-                                <Grid Grid.Column="0" 
-                                      HorizontalAlignment="Left"
-                                      Background="#FFFFC700"
-                                      Height="100"
-                                      Width="178">
-                                    
-                                <Image Source="{Binding ImagePath}" 
-                                       Stretch="UniformToFill" 
-                                       AutomationProperties.Name="{Binding Title}"/>
-
-                                    <Border Margin="2"
-                                        VerticalAlignment="Bottom"
-                                        HorizontalAlignment="Right"
-                                        Background="Black"
-                                        Padding="4,0,4,0">
-                                        <TextBlock 
-                                                TextWrapping="NoWrap" 
-                                                Foreground="White"
-                                                FontSize="14"/>
-                                    </Border>
-
-                                </Grid>
-
-                                <StackPanel Grid.Column="1" 
-                                            Margin="8,0,0,0">
-                                    <TextBlock Text="{Binding LineOne}" 
-                                               Style="{StaticResource PhoneTextNormalStyle}"
-                                               TextTrimming="WordEllipsis"/>
-                                    <TextBlock Text="{Binding LineTwo}" 
-                                               Style="{StaticResource PhoneTextSmallStyle}"
-                                               Margin="0,0,0,0"
-                                               TextWrapping="Wrap"/>
-                                    <TextBlock TextWrapping="NoWrap"
-                                               Text="{Binding PublishedAt}"
-                                               Style="{StaticResource PhoneTextSmallStyle}">
-                                    <Run Text="Published at " x:Uid="PublishedAt"/>
-                                    <Run Text="{Binding PublishedAt}" />
-                                    </TextBlock>
-                                </StackPanel>
-                            </Grid>
-                            </DataTemplate>
-                    </phone:LongListSelector.ItemTemplate>
-                </phone:LongListSelector>
+                <ContentPresenter Content="{Binding}"
+                                  ContentTemplate="{StaticResource LoadingListView}"/>
             </phone:PanoramaItem>
 
             <!--Panorama item two-->
