--- a/LiteTube/Controls/LoadingListView.xaml
+++ b/LiteTube/Controls/LoadingListView.xaml
@@ -1,12 +1,10 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:interactivity="using:LiteTube.Interactivity"
-    xmlns:i="using:Microsoft.Xaml.Interactivity"
-    xmlns:controls="clr-namespace:LiteTube.Controls"
-    xmlns:common="clr-namespace:LiteTube.Common"
     xmlns:converters="clr-namespace:LiteTube.Converters"
-    xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone">
+    xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
+    xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity">
+
 
     <converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" FalseValue="Collapsed" TrueValue="Visible"/>
 
@@ -15,53 +13,56 @@
             <phone:LongListSelector Margin="0,0,-22,0" 
                                     ItemsSource="{Binding Items}">
                 <phone:LongListSelector.ItemTemplate>
-                <DataTemplate>
-                    <Grid Margin="0,0,0,5">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition Width="*"/>
-                        </Grid.ColumnDefinitions>
+                    <DataTemplate>
+                        <Grid Margin="0,0,0,5">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
 
-                        <Grid Grid.Column="0" 
-                              HorizontalAlignment="Left"
-                              Background="DimGray"
-                              Height="100"
-                              Width="178">
+                            <Grid Grid.Column="0" 
+                                  HorizontalAlignment="Left"
+                                  Background="DimGray"
+                                  Height="100"
+                                  Width="178">
 
-                            <Image Source="{Binding ImagePath}" 
-                                   Stretch="UniformToFill" />
+                                <Image Source="{Binding ImagePath}" 
+                                       Stretch="UniformToFill" />
 
-                            <Border Margin="2"
-                                    VerticalAlignment="Bottom"
-                                    HorizontalAlignment="Right"
-                                    Background="Black"
-                                    Padding="4,0,4,0">
-                                <TextBlock TextWrapping="NoWrap" 
-                                           Foreground="White"
-                                           FontSize="14"/>
-                            </Border>
+                                <Border Margin="2"
+                                        VerticalAlignment="Bottom"
+                                        HorizontalAlignment="Right"
+                                        Background="Black"
+                                        Padding="4,0,4,0">
+                                    <TextBlock TextWrapping="NoWrap" 
+                                               Foreground="White"
+                                               FontSize="14"/>
+                                </Border>
+                            </Grid>
+
+                            <StackPanel Grid.Column="1" 
+                                        Margin="8,0,0,0">
+                                <TextBlock Text="{Binding Title}" 
+                                           Style="{StaticResource PhoneTextNormalStyle}"
+                                           TextTrimming="WordEllipsis"/>
+                                <TextBlock Text="{Binding ChannelTitle}" 
+                                           Style="{StaticResource PhoneTextSmallStyle}"
+                                           Margin="0,0,0,0"
+                                           TextWrapping="Wrap"/>
+                                <TextBlock TextWrapping="NoWrap"
+                                           Text="{Binding PublishedAt}"
+                                           Style="{StaticResource PhoneTextSmallStyle}">
+                                    <Run Text="Published at " x:Uid="PublishedAt"/>
+                                    <Run Text="{Binding PublishedAt}" />
+                                </TextBlock>
+                            </StackPanel>
                         </Grid>
-
-                        <StackPanel Grid.Column="1" 
-                                    Margin="8,0,0,0">
-                            <TextBlock Text="{Binding Title}" 
-                                       Style="{StaticResource PhoneTextNormalStyle}"
-                                       TextTrimming="WordEllipsis"/>
-                            <TextBlock Text="{Binding ChannelTitle}" 
-                                       Style="{StaticResource PhoneTextSmallStyle}"
-                                       Margin="0,0,0,0"
-                                       TextWrapping="Wrap"/>
-                            <TextBlock TextWrapping="NoWrap"
-                                       Text="{Binding PublishedAt}"
-                                       Style="{StaticResource PhoneTextSmallStyle}">
-                                <Run Text="Published at " x:Uid="PublishedAt"/>
-                                <Run Text="{Binding PublishedAt}" />
-                            </TextBlock>
-                        </StackPanel>
-                    </Grid>
-                </DataTemplate>
-            </phone:LongListSelector.ItemTemplate>
-        </phone:LongListSelector>
+                    </DataTemplate>
+                    <!--<i:Interaction.Behaviors>
+                        <interactivity: LoadMoreCommand="{Binding LoadMoreCommand}"/>
+                    </i:Interaction.Behaviors>-->
+                </phone:LongListSelector.ItemTemplate>
+            </phone:LongListSelector>
             
             <TextBlock HorizontalAlignment="Center"
                        VerticalAlignment="Center"
@@ -75,87 +76,6 @@
                        Text="Items not found"
                        Visibility="{Binding IsEmpty, Converter={StaticResource BooleanToVisibilityConverter}}"/>
         </Grid>
-        
-        <!--<Lo ItemsSource="{Binding Items}"
-                                      SelectionMode="{Binding SelectionMode}"
-                                      SelectedItems2="{Binding SelectedItems, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                      IsSwipeEnabled="false"
-                                      IsItemClickEnabled="{Binding IsItemClickEnabled}"
-                                      common:ItemClickCommand.Command="{Binding ItemClickCommand}"
-                                      common:ItemClickCommand.CommandParameter="{Binding RelativeSource={RelativeSource Mode=Self}, Path=SelectedItem}">
-                --><!--<i:Interaction.Behaviors>
-                    <interactivity:LoadItemsByScrollBehavior IsEnabled="True"
-                                                             LoadMoreCommand="{Binding LoadMoreCommand}"/>
-                </i:Interaction.Behaviors>--><!--
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <Grid Margin="0,0,0,5">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="Auto"/>
-                                <ColumnDefinition Width="*"/>
-                            </Grid.ColumnDefinitions>
-
-                            <Border Background="{ThemeResource ListViewItemPlaceholderBackgroundThemeBrush}" 
-                                    Grid.Column="0" 
-                                    HorizontalAlignment="Left">
-                                <Grid>
-                                    <Image Source="{Binding ImagePath}" 
-                                       Stretch="UniformToFill" 
-                                       AutomationProperties.Name="{Binding Title}" 
-                                       Height="100" 
-                                       Width="178"/>
-                                    <Border Margin="2"
-                                            VerticalAlignment="Bottom"
-                                            HorizontalAlignment="Right"
-                                            Background="Black"
-                                            Padding="4,0,4,0">
-                                        <TextBlock Text="{Binding Duration, Converter={StaticResource ResourceKey=TimeSpanFormatConverter}}" 
-                                                   TextWrapping="NoWrap" 
-                                                   Foreground="White"
-                                                   MaxLines="1"
-                                                   FontSize="14"/>
-                                    </Border>
-                                </Grid>
-                            </Border>
-                            <StackPanel Grid.Column="1" 
-                                        Margin="8,0,0,0">
-                                <TextBlock Text="{Binding Title}" 
-                                           Style="{StaticResource SnippetTitleTextBlockStyle}" 
-                                           TextTrimming="CharacterEllipsis"
-                                           MaxLines="2"/>
-                                <TextBlock Text="{Binding ChannelTitle}" 
-                                           Style="{StaticResource SnippetTextBlockStyle}" 
-                                           Margin="0,5,0,0"
-                                           TextWrapping="Wrap" 
-                                           MaxLines="1" />
-                                <TextBlock TextWrapping="NoWrap"
-                                           Style="{StaticResource SnippetTextBlockStyle}"
-                                           Text="{Binding PublishedAt}">
-                                    --><!--<Run Text="Published at " x:Uid="PublishedAt"/>
-                                    <Run Text="{Binding PublishedAt}" />--><!--
-                                </TextBlock>
-                            </StackPanel>
-                        </Grid>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </Lo>
-
-            <TextBlock HorizontalAlignment="Center"
-                       VerticalAlignment="Center"
-                       x:Uid="Loading"
-                       Text="Loading..."
-                       Style="{StaticResource SubheaderTextBlockStyle}"
-                       Foreground="{ThemeResource ContentForegroundBrush}"
-                       Visibility="{Binding IsLoading, Converter={StaticResource BooleanToVisibilityConverter}}"/>
-
-            <TextBlock HorizontalAlignment="Center"
-                       VerticalAlignment="Center"
-                       x:Uid="IsEmpty"
-                       Text="Items not found"
-                       Style="{StaticResource SubheaderTextBlockStyle}"
-                       Foreground="{ThemeResource ContentForegroundBrush}"
-                       Visibility="{Binding IsEmpty, Converter={StaticResource BooleanToVisibilityConverter}}"/>
-        </Grid>-->
     </DataTemplate>
 <!--
     <DataTemplate x:Key="CategoryLoadingListView" >
