--- a/LiteTube/Controls/LoadingListView.xaml
+++ b/LiteTube/Controls/LoadingListView.xaml
@@ -179,7 +179,9 @@
 
                                 <StackPanel Orientation="Horizontal">
                                     <HyperlinkButton Content="{Binding AuthorDisplayName}"
-                                                     Margin="0, -5,0,0"/>
+                                                     Margin="0, -5,0,0"
+                                                     Command="{Binding ChannelCommand}"
+                                                     CommandParameter="{Binding AuthorChannelId}"/>
                                     <TextBlock TextWrapping="NoWrap"
                                                Text="{Binding PublishedAtRaw}"
                                                Margin="0,0,0,0"/>
